--- a/public/submit.html
+++ b/public/submit.html
@@ -177,7 +177,7 @@
 
 <div id="form">
 
-<form id="submission">
+<form id="submission" action="/sendMail" method="POST">
 
   <div id="success-msg">
     <div id="success-cont">
