added hack the cloud to partners

--- a/public/join.html
+++ b/public/join.html
@@ -62,6 +62,7 @@
     <a class="contact">contact</a>
     <a href="/team.html">the team</a>
     <a href="/join.html">join us</a>
+    <a href="/support.html">support us</a>
     <a href="/submit.html">submit</a>
   </div>
   </div>
@@ -101,30 +102,19 @@
   <div class="hwrap">
     <h1>join the team.</h1> 
   </div>
-  We are currently seeking talented and passionate iOS and Android developers to join our community. We searching for developers who  are comfortable in a collaborative environment, have a drive for innovation, and a passion for pushing the limits on ingenuity. You must also have a good sense of design and structure of an app. Become part of this international project today!
+  We are currently seeking talented and passionate developers experienced in Flutter to become part of the mobile app development team at Mind Spark. We are searching for developers who are comfortable in a collaborative environment, have a drive for innovation, and are passionate about pushing the limits on ingenuity. You must also have a good sense of design and structure of an app. Become part of this international project today!
 </div>
 
 <!-- roles -->
 <div id="openings">
 
   <div class="role">
-    <div class="icon"><i class="fab fa-apple"></i></div>
-    <h2>iOS developer</h2>
+    <div class="icon"><img src="/images/flutter-logo.png"/></div>
+    <h2>Flutter developer</h2>
     <ul>
       <li>at least 1 year of experience</li>
-      <li>knowledgable in UIKit</li>
-      <li>knowledgable in firebase</li>
-    </ul>
-     <div class="apply"><a target="_blank" href="https://mindsparkmagazine.typeform.com/to/MXkPQ4">apply</a></div>
-  </div>
-
-  <div class="role">
-    <div class="icon"><i class="fab fa-android"></i></div>
-    <h2>Android developer</h2>
-    <ul>
-      <li>at least 1 year of experience</li>
-      <li>comfortable with Firebase Firestore</li>
       <li>strong UI/UX skills</li>
+      <li>knowledgable in Firebase</li>
     </ul>
      <div class="apply"><a target="_blank" href="https://mindsparkmagazine.typeform.com/to/MXkPQ4">apply</a></div>
   </div>
