--- a/public/team.html
+++ b/public/team.html
@@ -163,7 +163,7 @@
       </p>
 
         <div class="role" title="co-founder"><i class="far fa-lightbulb fa-fw"></i></div>
-        <div class="role" title="chief of android development"><i class="fab fa-android fa-fw"></i></div>
+        <div class="role" title="chief of mobile app development"><i class="fas fa-mobile-alt fa-fw"></i></div>
         <div class="role"><a title="zareeb.chowdhury234@gmail.com" href="mailto:zareeb.chowdhury234@gmail.com"><i class="far fa-envelope fa-fw"></i></a></div>
       
     </div>
@@ -173,7 +173,7 @@
 
   <div class="id">
     <h1>Zareeb Chowdhury</h1>
-    <i>co-founder, chief of android development</i>
+    <i>co-founder, chief of mobile app development</i>
   </div>
 
 </div>
@@ -182,7 +182,7 @@
 <div class="member programmer">
 
   <div class="mwrapper">
-    <img src="/images/members/rachel.jpg"/>
+    <img src="/images/members/Rachel.jpg"/>
 
     <div class="dwrapper">
     <div class="bio">
@@ -635,6 +635,28 @@
     </div>
   </div>
   </div>
+
+    <!-- partner 3 -->
+    <div class="partner-wrap">
+      <div class="partner">
+        <div class="partner-front">
+          <img src="images/hackthecloudlogo.png" style="width:250px;margin-top:calc(50% - 64px);"/>
+        </div>
+        <div class="partner-back">
+          <div class="partner-links">
+            <a target="_blank" href="https://hackthefog.com"><i class="fas fa-globe fa-fw"></i></a>
+            <a target="_blank" href="https://www.instagram.com/hackthefog/"><i class="fab fa-instagram fa-fw"></i></a>
+             <a target="_blank" href="https://twitter.com/hackthefog"><i class="fab fa-twitter fa-fw"></i></a>
+          </div>
+          <div class="desc-wrap">
+          <div class="desc">In March 2018, we made history with Hack the Fog 1.0, San Francisco’s first high school hackathon. We now want to bring the experience to everyone during this time of quarantine.<br>
+            Hack the Fog 1.0 made history in San Francisco providing a first time experience for many high schoolers in San Francisco. Due to the pandemic Hack the Fog 2.0 was put on hold but we are happy to bring Hack the Cloud, our online hackathon in response to the pandemic.
+            <a class="more" target="_blank" href="https://hackthefog.com">learn more</a> 
+          </div>
+          </div>
+        </div>
+      </div>
+      </div>
 
 
 </div>
