--- a/public/submit.html
+++ b/public/submit.html
@@ -184,6 +184,7 @@
       <i class="fas fa-check-circle"></i>
       <h1>thank you!</h1>
       <p>Your submission was successful. We can't wait to see your work!</p>
+      <p><i>You should receive a confirmation email soon.</i></p>
       <span>make another submission</span>
     </div>
   </div>
