--- a/public/footer.html
+++ b/public/footer.html
@@ -65,7 +65,7 @@ submit.onclick = () => {
   var width = Math.round(vw/40);
   var prevLeft, resize, prevVW;
 
-  console.log(vw);
+  //console.log(vw);
 
   makeTriangles();
   
@@ -102,7 +102,7 @@ function makeTriangles () {
 }
 
 function addTriangles () {
-  console.log('add');
+  //console.log('add');
   for (let i = 0; i < resize; i++) {
     let div = document.createElement('div');
     div.classList.add('triangle');
