--- a/public/join.html
+++ b/public/join.html
@@ -26,6 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/4a07f93241.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
     <script>
 
@@ -100,26 +101,43 @@
 <!-- info -->
 <div id="info">
   <div class="hwrap">
-    <h1>join the team.</h1> 
+    <h1>become an ambassador.</h1> 
   </div>
-  We are currently seeking talented and passionate developers experienced in Flutter to become part of the mobile app development team at Mind Spark. We are searching for developers who are comfortable in a collaborative environment, have a drive for innovation, and are passionate about pushing the limits on ingenuity. You must also have a good sense of design and structure of an app. Become part of this international project today!
+  <!-- Sorry, we currently do not have any position open; however, while our online platform is still in development, you have the chance to <a href="/submit.html">submit your works</a> and become a Mind Spark <i>pioneer</i>. -->
+  <!-- We are currently seeking talented and passionate developers experienced in React.js to become part of the web development team at Mind Spark. We are searching for developers who are comfortable in a collaborative environment, have a drive for innovation, and are passionate about pushing the limits on ingenuity. You must also have a good sense of design and structure of an app. Become part of this international project today!<Br>
+  <a href="mailto:contact@mindsparkintl.co">Email us</a> to learn more and apply. <b>Note: You must be a high school or college student.</b> -->
+  We are starting an ambassador program for Mind Spark! We are looking for people who are passionate about STEM and are willing to engage with their communities, whether within the school or with people you know. Ambassadors will be able to make pivotal decisions for Mind Spark International for each of your specific geographic areas. You will also help promote Mind Spark International in your respective areas through events, programs, social media integration.
 </div>
 
 <!-- roles -->
 <div id="openings">
 
   <div class="role">
-    <div class="icon"><img src="/images/flutter-logo.png"/></div>
-    <h2>Flutter developer</h2>
+    <div class="icon"><i style="padding-top:5%" class="ri-flag-2-fill"></i></div>
+
+    <h2>apply</h2>
     <ul>
-      <li>at least 1 year of experience</li>
-      <li>strong UI/UX skills</li>
-      <li>knowledgable in Firebase</li>
+      <li>passionate about STEM</li>
+      <li>strong social media presence</li>
+      <li>comfortable being featured in social media accounts</li>
+      <li>strong communication skills or willing to communicate with their school community and connections</li>
+      <li>willing to participate in our events and programs</li>
+      <li>can dedicate at least 3 hours per week</li>
     </ul>
-     <div class="apply"><a target="_blank" href="https://mindsparkmagazine.typeform.com/to/MXkPQ4">apply</a></div>
+    <div class="apply"><a href="https://docs.google.com/forms/d/e/1FAIpQLScFWfVZORyMx1x1daJlgsQnbbQLvxSzAsNuJcpGtXC6FlWeQw/viewform?usp=send_form">sign me up!</a></div>
+
+    <!-- <h2>React developer</h2>
+    <ul>
+      <li>at least 1 year of experience with React</li>
+      <li>in-depth knowledge of HTML, CSS, Javascript</li>
+      <li>familiar with REST APIs</li>
+      <li>knowledge of React tools (Redux, Webpack, etc.) and PostgreSQL is a plus</li>
+      <li>strong UI/UX skills</li>
+    </ul>
+     <div class="apply"><a href="mailto:contact@mindsparkintl.co">apply</a></div> -->
   </div>
 
-</div>
+</div> 
 
 </div>
 <!-- container end -->
